--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -21,7 +24,7 @@
                     </td>
                     <td><label for="existing_escore" class="form-label mb-0">Or Existing:</label></td>
                     <td>
-                        <select class="form-select form-select-sm" id="existing_escore" multiple size="5"></select>
+			<select id="existing_escore" multiple="multiple" style="width: 100%;" class="form-select form-select-sm" size="5"></select>
                     </td>
                 </tr>
                 <tr>
