--- a/templates/index.html
+++ b/templates/index.html
@@ -59,6 +59,7 @@
                     <label class="form-check-label" for="iscore">I-Score</label>
                 </div>
                 <button class="btn btn-success btn-sm ms-2" type="button" id="upload-and-plot">Upload & Plot</button>
+                <button class="btn btn-success btn-sm ms-2" type="button" id="toggleViewButton">Toggle Highest Values</button>
             </div>
 
             <div class="d-flex align-items-center mb-2">
