--- a/templates/index.html
+++ b/templates/index.html
@@ -67,6 +67,21 @@
                 </div>
                 <button class="btn btn-success btn-sm ms-2" type="button" id="upload-and-plot">Upload & Plot</button>
                 <button class="btn btn-success btn-sm ms-2" type="button" id="toggle-view">Toggle Highest Values</button>
+
+                <div class="d-flex flex-column mb-3">
+                    <div class="d-flex align-items-center mb-2">
+                        <input type="checkbox" id="enable_score_threshold" class="form-check-input me-2">
+                        <label for="enable_score_threshold" class="form-label me-2">EScore Threshold:</label>
+                        <input type="range" min="-0.5" max="0.5" step="0.01" value="0.45" id="score_threshold" class="form-range flex-grow-1 me-2" disabled>
+                        <input type="number" min="-0.5" max="0.5" step="0.01" value="0.45" id="score_threshold_input" class="form-control form-control-sm" style="width: 70px;" disabled>
+                    </div>
+                    <div class="d-flex align-items-center">
+                        <input type="checkbox" id="enable_ranks_threshold" class="form-check-input me-2">
+                        <label for="enable_ranks_threshold" class="form-label me-2">Ranks Threshold:</label>
+                        <input type="range" min=0 max=100 step=0.1 value="99" id="ranks_threshold" class="form-range flex-grow-1 me-2" disabled>
+                        <input type="number" min=0 max=100 step=0.1 value="99" id="ranks_threshold_input" class="form-control form-control-sm" style="width: 70px;" disabled>
+                    </div>
+                </div>
             </div>
 
             <div class="d-flex align-items-center mb-2">
