--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,11 @@
                             <input class="form-check input" type="checkbox" id="search-binding-sites" name="search-binding-sites">
                             <label class="form-check label" for="search-binding-sites">Search Binding Sites</label>
                         </div>
+                        <!-- checkbox for searching significant mutations -->
+                        <div class="form-check form-check-inline">
+                            <input class="form-check input" type="checkbox" id="search-significant-mutations" name="search-significant-mutations">
+                            <label class="form-check label" for="search-significant-mutations">Search Significant Mutations</label>
+                        </div>
                     </td>
                 </tr>
                 <tr>
