Show only new or removed TFs binding sites

--- a/templates/index.html
+++ b/templates/index.html
@@ -83,7 +83,10 @@
                     </div>
                 </div>
             </div>
-
+            <div class="form-check form-check-inline">
+                            <input class="form-check input" type="checkbox" id="show-diff-only" name="show-diff-only">
+                            <label class="form-check label" for="show-diff-only">Show diff only</label>
+            </div>
             <div class="d-flex align-items-center mb-2">
                 <button class="btn btn-secondary btn-sm me-2" type="button" id="add-sequence-row">Add Sequence</button>
             </div>
