MPRA-like graph; Insertions support and visualization; Modulate plotting

--- a/templates/index.html
+++ b/templates/index.html
@@ -137,6 +137,7 @@
 
         <div id="bindline-plot"></div>
         <div id="binding-sites-plot"></div>
+        <div id="all-mutants-plot"></div>
     </div>
 
     <script src="{{ url_for('static', filename='script.js') }}"></script>
